Thu Jul  3 12:28:44 1997  Sumedh Mungee  <sumedh@lindy.cs.wustl.edu>

	* Parse_Headers.cpp: Line 137, Changed pt to ptr (it was a typo)

Wed Jul  2 22:33:52 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* JAWS_File.{h,cpp}: Fixed deadlock bug, since RW_MUTEX's are not
	  recursive (drat!).

Wed Jul  2 21:03:12 1997  Douglas C. Schmidt  <schmidt@flamenco.cs.wustl.edu>

	* Made a major pass through all the code and made the style
	  consistent with that found in ACE.

Wed Jul  2 14:33:27 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* JAWS_File.cpp: Added double check locking pattern to the fetch
	  routine of the virtual filesystem.  This slows things down
	  considerably for files which change frequently and for cache
	  misses in general, but it should be correct.

Wed Jul  2 14:59:29 1997  Nanbor Wang  <nw1@cumbia.cs.wustl.edu>

	* HTTP_Helpers.cpp (HTTP_decode_string): Added cast from strtol to
 	  char explicitly to prevent NT from complaining.

Wed Jul  2 14:33:27 1997  James C Hu  <jxh@lambada.cs.wustl.edu>

	* JAWS_File.{h.cpp}: Modifications to support RW_MUTEX for both
	  the virtual filesystem and the low level ACE_File.  Next major
	  change will be to re-implement the virtual filesystem to use a
	  hash table ala ACE_Hash_Map_Manager.

Wed Jul  2 00:23:22 1997  James C Hu  <jxh@polka.cs.wustl.edu>

	* HTTP_Server.{h,cpp}: Changed parsing of options to use
	  mnemonic names rather than numbers.  Added a new thread
	  strategy, THROTTLE.  This is thread-per-request until some
	  maximum number.  Unfortunately, it does not become thread-pool
	  at this point... yet :-).  Added a new option to pass in a
	  backlog value.

	* svc.conf: adjusted to account for the changed options.

	* README: changed to explain new svc.conf options.

	* JAWS_File.cpp: Changed it so that when the file is added to the
	  cache, it is also acquired.  When it is removed from the cache,
	  it is released.  This is so that the reference count is at least